--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,7 @@ h4 {
   position: fixed;
   top: 0;
   z-index: 10000;
-  height: 60px;
+  height: 3.75rem;
   background-color: #FFF;
   border: none;
   border-radius: 0;
@@ -54,13 +54,13 @@ h4 {
 }
 .navbar li a {
   color: #FF3366 !important;
-  margin-left: 15px;
-  padding: 20px 0 20px 0;
+  margin-left: 0.9375rem;
+  padding: 1.25rem 0 1.25rem 0;
   font-weight: 400;
 }
 
 .hvr-underline-from-left:before {
-  bottom: 15px;
+  bottom: 0.9375rem;
   background: #FF3366;
   height: 2px;
 }
@@ -71,11 +71,11 @@ h4 {
 }
 
 .logotype {
-  height: 45px;
+  height: 2.8125rem;
 }
 
 .navbar-toggle {
-  margin-top: 15px;
+  margin-top: 0.9375rem;
 }
 
 .navbar-inverse .navbar-toggle {
@@ -104,7 +104,7 @@ h4 {
 
 @media (max-width: 991.98px) {
   .navbar-brand {
-    margin-left: 15px !important;
+    margin-left: 0.9375rem !important;
   }
 }
 @media (max-width: 767.98px) {
@@ -114,8 +114,8 @@ h4 {
   }
   .navbar-inverse .navbar-collapse a,
 .navbar-inverse .navbar-form a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 0.9375rem;
+    padding-bottom: 0.9375rem;
     widtH: 150px;
   }
 
@@ -131,8 +131,8 @@ h4 {
 @media (max-height: 320px) {
   .navbar-inverse .navbar-collapse a,
 .navbar-inverse .navbar-form a {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
   }
 
   .hvr-underline-from-left:before {
