Navigation search link changed to register link

--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -23,7 +23,7 @@
       </ul>
       <!-- search and login links -->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{url_for('search_results')}}" class="hvr-underline-from-left">Search</a></li>
+        <li><a href="{{url_for('register')}}" class="hvr-underline-from-left">Register</a></li>
         <li><a href="{{url_for('login')}}" class="hvr-underline-from-left">Login</a></li>
       </ul>
     </div>
