Quick fix, forms buttons focus style changed

--- a/scss/components/forms/recovery-form.scss
+++ b/scss/components/forms/recovery-form.scss
@@ -52,7 +52,7 @@
     color: $recovery-button-color;
     border: 1px solid $recovery-button-border-color;
 
-    &:hover {
+    &:hover, &:focus {
         background: $recovery-button-bg-hv;
         color: $recovery-button-color-hv;
         border: 1px solid $recovery-button-border-color-hv;
