--- a/scss/components/forms/login-form.scss
+++ b/scss/components/forms/login-form.scss
@@ -103,7 +103,7 @@
     color: $login-button-color;
     border: 1px solid $login-button-border-color;
 
-    &:hover {
+    &:hover, &:focus {
         background: $login-button-bg-hv;
         color: $login-button-color-hv;
         border: 1px solid $login-button-border-color-hv;
