--- a/scss/components/forms/register-form.scss
+++ b/scss/components/forms/register-form.scss
@@ -52,7 +52,7 @@
     color: $register-button-color;
     border: 1px solid $register-button-border-color;
 
-    &:hover {
+    &:hover, &:focus {
         background: $register-button-bg-hv;
         color: $register-button-color-hv;
         border: 1px solid $register-button-border-color-hv;
@@ -70,7 +70,7 @@
     color: $cancel-button-color;
     border: 1px solid $cancel-button-border-color;
 
-    &:hover {
+    &:hover, &:focus{
         background: $cancel-button-bg-hv;
         color: $cancel-button-color-hv;
         border: 1px solid $cancel-button-border-color-hv;
