--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -15,6 +15,7 @@
                 <div class="form-group">
                     <label>Email address</label>
                     <input type="email" class="form-control" id="recovery-email" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <!-- Register button -->
                 <div class="form-group recovery-button">
