User-card class changed to *current page - user-from

--- a/scss/components/forms/recovery-form.scss
+++ b/scss/components/forms/recovery-form.scss
@@ -18,7 +18,7 @@
     justify-content: center;
 }
 
-.recovery-user-card {
+.recovery-user-form {
     height: 400px;
     width: 350px;
     margin-top: auto;
