--- a/scss/components/forms/register-form.scss
+++ b/scss/components/forms/register-form.scss
@@ -18,7 +18,7 @@
     justify-content: center;
 }
 
-.register-user-card {
+.register-user-form {
     height: 450px;
     width: 350px;
     margin-top: auto;
