Class change, cosmetic changes

--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -1,7 +1,7 @@
 <!-- Main login container -->
 <h2 class="hidden">Login Form</h2>
 <div class="login-form">
-    <div class="user-card">
+    <div class="login-user-form">
         <!-- Top logo container -->
         <div class="flex-center">
             <div class="half-circle"></div>
