--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -1,7 +1,7 @@
 <!-- Main login container -->
 <h2 class="hidden">Recovery Form</h2>
 <div class="recovery-form">
-    <div class="recovery-user-card">
+    <div class="recovery-user-form">
         <!-- Form container -->
         <div class="recovery-form-container">
             <!-- Form -->
