--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -1,7 +1,7 @@
 <!-- Main login container -->
 <h2 class="hidden">Register Form</h2>
 <div class="register-form">
-    <div class="register-user-card">
+    <div class="register-user-form">
         <!-- Form container -->
         <div class="register-form-container">
             <!-- Form -->
