Text area added to contact page form

--- a/templates/components/forms/contact-form.html
+++ b/templates/components/forms/contact-form.html
@@ -6,6 +6,11 @@
         <div class="form-container">
             <!-- Form -->
             <form>
+                <!-- Register form title -->
+                <div class="form-group">
+                    <h3 class="recovery-form-title">Send us a Message</h3>
+                    <p class="recovery-text">Feel free to contact us. We will try to get back to you ASAP but.., you know COVID-19 also attacked our servers.. hehe. We're here for you 24h/6 days a week.</p>
+                </div>
                 <!-- Name input box -->
                 <div class="form-group">
                     <label>Name</label>
@@ -15,6 +20,11 @@
                 <div class="form-group">
                     <label>Email address</label>
                     <input type="email" class="form-control" id="contact-email" aria-describedby="emailHelp" placeholder="Enter email">
+                </div>
+                <!-- Text area input -->
+                <div class="form-group">
+                    <label>Your message</label>
+                    <textarea class="form-control" id="contact-message" rows="10" placeholder="..."></textarea>
                 </div>
                 <!-- Login button -->
                 <div class="form-group send-button">
