Clear form button added

--- a/templates/components/forms/contact-form.html
+++ b/templates/components/forms/contact-form.html
@@ -8,8 +8,8 @@
             <form>
                 <!-- Register form title -->
                 <div class="form-group">
-                    <h3 class="recovery-form-title">Send us a Message</h3>
-                    <p class="recovery-text">Feel free to contact us. We will try to get back to you ASAP but.., you know COVID-19 also attacked our servers.. hehe. We're here for you 24h/6 days a week.</p>
+                    <h3 class="contact-form-title">Send us a Message</h3>
+                    <p class="contact-text">Feel free to contact us. We will try to get back to you ASAP but.., you know COVID-19 also attacked our servers.. hehe. We're here for you 24h/6 days a week.</p>
                 </div>
                 <!-- Name input box -->
                 <div class="form-group">
@@ -29,6 +29,10 @@
                 <!-- Login button -->
                 <div class="form-group send-button">
                     <button type="button" name="button" class="btn send-btn">Send</button>
+                </div>
+                <!-- Clear form button -->
+                <div class="form-group send-button">
+                    <button type="button" name="button" class="btn clear-from-btn">Clear form</button>
                 </div>
             </form>
         </div>
