--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,5 +1,5 @@
 {% extends 'layout/base.html' %} {% block content %}
-<div class="container"> <!--contact-flex sticky-footer"-->
+<div class="container contact-flex sticky-footer"> <!--contact-flex sticky-footer"-->
     <h1 class="hidden">Contact Page</h1>
     {% include 'components/forms/contact-form.html' %}
 </div>
