--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -1,90 +1,123 @@
-// headings
+/*! 
+Heading style
+*/
 $h4-color: #FF3366;
 
-// main navigation 
+/*! 
+Navigation
+*/
+/*! Links and links hover style */
 $nav-bg-color: #FFF;
 $nav-border-color: #FF3366;
 $nav-links-color: #FF3366;
 $nav-link-hv: #FFF;
 $nav-link-bg-hv :#FF3366;
-
-// toggle/mobile navigation
+/*! Dropdown mobile navigation style */
 $nav-bg-color-mobile: #FF3366;
 $nav-links-color-mobile: #FFF;
 $nav-link-bg-hv-mobile: #FFF;
 
-// footer
+/*! 
+Footer 
+*/
+/*! Background */
 $footer-bg: #FFF;
-$footer-copyrights-bg: #FF3366;
+/*! Footer menu links color */
 $footer-link-color: #FF3366;
+/*! Copyrights */
 $copyrights-color: #FFF;
-
-// newsletter
+$footer-copyrights-bg: #FF3366;
+/*! Newsletter */
 $newsletter-input-border: #EEE;
 $newsletter-input: #FFF;
 $input-form-text-color:#ababab;
 $newsletter-button-border: #FF3366;
 
-// login page
-$login-card-bg: #FFF;
-$login-form-circle-bg: #FF3366;
+/*! 
+All user forms
+*/
+/*! Userform input boxes font color */
+$input-box-color: #ABABAB;
 
-// recovery container
+/*! 
+Login Page
+*/
+/*! Login form background  */
+$login-form-bg: #FFF;
+$login-form-circle-bg: #FF3366;
+/*! Login form recovery and sign-up links color */
 $recovery-text-color: #000;
 $sing-up-link-color: #FF3366;
 $forgot-link-color: #1DB0B5;
-
-// userform input boxes
-$input-box-color: #ABABAB;
-
-// login button style
+/*! Login form login button style */
 $login-button-bg: #FFF;
 $login-button-color: #FF3366;
 $login-button-border-color: #FF3366;
-
-// login button hover style
+/*! Login form login button hover style */
 $login-button-bg-hv: #FF3366;
 $login-button-color-hv: #FFF;
 $login-button-border-color-hv: #FF3366;
 
-// register page
-$register-card-bg: #FFF;
-
-// register form title
+/*!
+Register Page
+*/
+/*! Register form background */
+$register-form-bg: #FFF;
+/*! Register form title font color */
 $register-form-title:#FF3366;
-
-// register button style
+/*! Register form register button style */
 $register-button-bg: #FFF;
 $register-button-color: #FF3366;
 $register-button-border-color: #FF3366;
-
-// register button hover style
+/*! Register form register button hover style */
 $register-button-bg-hv: #FF3366;
 $register-button-color-hv: #FFF;
 $register-button-border-color-hv: #FF3366;
-
-// cancel button style
+/*! Register form cancel button style */
 $cancel-button-bg: #FFF;
 $cancel-button-color: #1DB0B5;
 $cancel-button-border-color: #1DB0B5;
-
-// cancel button hover style
+/*! Register form cancel button hover style */
 $cancel-button-bg-hv: #1DB0B5;
 $cancel-button-color-hv: #FFF;
 $cancel-button-border-color-hv: #1DB0B5;
 
-// register page
-$recovery-card-bg: #FFF;
-
-// register form title
+/*! 
+Recovery Page
+*/
+/*! Recovery form background */
+$recovery-form-bg: #FFF;
+/*! Recovery form title font color */
 $recovery-form-title:#FF3366;
-
-// register button style
+/*! Recovery form recovery button style */
 $recovery-button-bg: #FFF;
 $recovery-button-color: #FF3366;
 $recovery-button-border-color: #FF3366;
-
-// register button hover style
+/*! Recovery form recovery button hover style */
 $recovery-button-bg-hv: #FF3366;
 $recovery-button-color-hv: #FFF;
 $recovery-button-border-color-hv: #FF3366;
+
+/*! 
+Contact Page
+*/
+/*! Contact form background */
+$contact-form-bg: #FFF;
+/*! Contact form title font color */
+$contact-form-title:#FF3366;
+/*! Contact form send button style */
+$send-button-bg: #FFF;
+$send-button-color: #FF3366;
+$send-button-border-color: #FF3366;
+/*! Contact form send button hover style */
+$send-button-bg-hv: #FF3366;
+$send-button-color-hv: #FFF;
+$send-button-border-color-hv: #FF3366;
+/*! Contact form cancel button style */
+$clear-form-button-bg: #FFF;
+$clear-form-button-color: #1DB0B5;
+$clear-form-button-border-color: #1DB0B5;
+/*! Contact form send cancel hover style */
+$clear-form-button-bg-hv: #1DB0B5;
+$clear-form-button-color-hv: #FFF;
+$clear-form-button-border-color-hv: #1DB0B5;
