Quick fix, ' sign in class name

--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -3,7 +3,7 @@
     <hr class="hr-line">
     <!-- Main footer container -->
     <div class="container colored-footer">
-        <div class="row´">
+        <div class="row">
             <!-- Logotype and text about company -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-about-section">
                 <!-- Footer main title -->
