Cancel button class spelling corrected

--- a/templates/components/forms/contact-form.html
+++ b/templates/components/forms/contact-form.html
@@ -32,7 +32,7 @@
                 </div>
                 <!-- Clear form button -->
                 <div class="form-group send-button">
-                    <button type="button" name="button" class="btn clear-from-btn">Clear form</button>
+                    <button type="button" name="button" class="btn clear-form-btn">Clear form</button>
                 </div>
             </form>
         </div>
