--- a/scss/components/forms/login-form.scss
+++ b/scss/components/forms/login-form.scss
@@ -24,7 +24,7 @@
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: $login-card-bg;
+    background: $login-form-bg;
     position: relative;
     flex-direction: column;
     padding: 10px;
