--- a/scss/components/forms/register-form.scss
+++ b/scss/components/forms/register-form.scss
@@ -23,7 +23,7 @@
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: $register-card-bg;
+    background: $register-form-bg;
     position: relative;
     flex-direction: column;
     padding: 10px;
