--- a/templates/components/forms/contact-form.html
+++ b/templates/components/forms/contact-form.html
@@ -27,11 +27,8 @@
                     <textarea class="form-control" id="contact-message" rows="5" placeholder="..."></textarea>
                 </div>
                 <!-- Login button -->
-                <div class="form-group send-button">
+                <div class="form-group contact-form-buttons">
                     <button type="button" name="button" class="btn send-btn">Send</button>
-                </div>
-                <!-- Clear form button -->
-                <div class="form-group send-button">
                     <button type="button" name="button" class="btn clear-form-btn">Clear form</button>
                 </div>
             </form>
