--- a/static/css/style.css
+++ b/static/css/style.css
@@ -205,6 +205,9 @@ h4 {
 .contact-form .form-container {
   margin: 0 !important;
 }
+.contact-form form {
+  padding: 1rem;
+}
 
 .contact-flex-center {
   display: flex;
@@ -212,14 +215,13 @@ h4 {
 }
 
 .contact-user-form {
-  height: 600px;
+  height: auto;
   width: 600px;
   margin-top: auto;
   margin-bottom: auto;
   background: #FFF;
   position: relative;
   flex-direction: column;
-  padding: 10px;
   border-radius: 5px;
 }
 
@@ -227,12 +229,16 @@ h4 {
   color: #FF3366;
 }
 
+.contact-text {
+  font-size: 0.85rem;
+  padding-bottom: 1rem;
+}
+
 .contact-form-container {
   margin-top: 0;
 }
 
 .contact-form-buttons {
-  margin-bottom: 0;
   display: flex;
   justify-content: space-between;
 }
@@ -262,11 +268,6 @@ h4 {
   background: #1DB0B5;
   color: #FFF;
   border: 1px solid #1DB0B5;
-}
-
-.contact-text {
-  font-size: 0.85rem;
-  padding-bottom: 1rem;
 }
 
 .box-shadow, .login-user-form {
