Missing ID fields for FORM and BUTTONS applied to code

--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -5,7 +5,7 @@
         <!-- Form container -->
         <div class="recovery-form-container">
             <!-- Form -->
-            <form>
+            <form id="recovery-form" name="recovery-form" method="POST">>
                 <!-- Register form title -->
                 <div class="form-group">
                     <h3 class="recovery-form-title">Password recovery</h3>
@@ -19,7 +19,7 @@
                 </div>
                 <!-- Register button -->
                 <div class="form-group recovery-button">
-                    <button type="button" name="button" class="btn recovery-btn">Recover</button>
+                    <button type="button" name="button" class="btn recovery-btn" id="recovery-button">Recover</button>
                 </div>
                 <!-- Cancel button -->
                 <div class="form-group cancel-button">
