--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -5,7 +5,7 @@
         <!-- Form container -->
         <div class="register-form-container">
             <!-- Form -->
-            <form>
+            <form id="register-form" name="register-form" method="POST">>
                 <!-- Register form title -->
                 <div class="form-group">
                     <h3 class="register-form-title">Register</h3>
@@ -28,7 +28,7 @@
                 </div>
                 <!-- Register button -->
                 <div class="form-group register-button">
-                    <button type="button" name="button" class="btn register-btn">Register</button>
+                    <button type="button" name="button" class="btn register-btn" id="register-button">Register</button>
                 </div>
                 <!-- Cancel button -->
                 <div class="form-group cancel-button">
