--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -12,7 +12,7 @@
         <!-- Form container -->
         <div class="form-container">
             <!-- Form -->
-            <form>
+            <form id="login-form" name="login-form" method="POST">>
                 <!-- Email input box -->
                 <div class="form-group">
                     <label>Email address</label>
@@ -26,7 +26,7 @@
                 </div>
                 <!-- Login button -->
                 <div class="form-group login-button">
-                    <button type="button" name="button" class="btn login-btn">Login</button>
+                    <button type="button" name="button" class="btn login-btn" id="login-in-button">Login</button>
                 </div>
             </form>
         </div>
