--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -5,7 +5,7 @@
         <!-- Form container -->
         <div class="recovery-form-container">
             <!-- Form -->
-            <form id="recovery-form" name="recovery-form" method="POST">>
+            <form id="recovery-form" name="recovery-form" method="POST">
                 <!-- Register form title -->
                 <div class="form-group">
                     <h3 class="recovery-form-title">Password recovery</h3>
