--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -5,7 +5,7 @@
         <!-- Form container -->
         <div class="register-form-container">
             <!-- Form -->
-            <form id="register-form" name="register-form" method="POST">>
+            <form id="register-form" name="register-form" method="POST">
                 <!-- Register form title -->
                 <div class="form-group">
                     <h3 class="register-form-title">Register</h3>
