--- a/scss/components/forms/login-form.scss
+++ b/scss/components/forms/login-form.scss
@@ -5,7 +5,6 @@
     -moz-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.06);
 }
 
-
 // main login form style
 .login-form {
     display: flex;
@@ -14,22 +13,21 @@
     padding-bottom: 10px;
 }
 
-.flex-center {
-    display: flex;
-    justify-content: center;
-}
-
 .login-user-form {
-    height: 400px;
+    height: auto;
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
     background: $login-form-bg;
     position: relative;
     flex-direction: column;
-    padding: 10px;
     @extend .box-shadow;
     border-radius: 5px;
+    padding: 2rem 1rem;
+    
+    form {
+        margin-top: 50px;
+    }
 }
 
 // fancy top logo
@@ -72,11 +70,6 @@
     border: 2px solid #FFF;
 }
 
-// userform fields
-.form-container {
-    margin-top: 80px;
-}
-
 .form-group {
     padding: 0 1rem;
 }
@@ -103,7 +96,8 @@
     color: $login-button-color;
     border: 1px solid $login-button-border-color;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         background: $login-button-bg-hv;
         color: $login-button-color-hv;
         border: 1px solid $login-button-border-color-hv;
@@ -112,10 +106,11 @@
 
 // bottom links
 .recovery-container {
-    padding: 0 1rem;
+    padding: 0rem 1rem;
     font-size: 0.85rem;
     text-align: left;
     color: $recovery-text-color;
+
     a {
         text-decoration: none;
     }
