--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,6 +79,11 @@ h4 {
   padding-top: 20px;
 }
 
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
 .hr-line {
   height: 1px;
   width: 80%;
@@ -89,7 +94,7 @@ h4 {
 }
 
 :root {
-  --footer-main-height: 360px;
+  --footer-main-height: 300px;
 }
 
 .navbar {
@@ -209,11 +214,6 @@ h4 {
   padding: 1rem;
 }
 
-.contact-flex-center {
-  display: flex;
-  justify-content: center;
-}
-
 .contact-user-form {
   height: auto;
   width: 600px;
@@ -283,21 +283,19 @@ h4 {
   padding-bottom: 10px;
 }
 
-.flex-center {
-  display: flex;
-  justify-content: center;
-}
-
 .login-user-form {
-  height: 400px;
+  height: auto;
   width: 350px;
   margin-top: auto;
   margin-bottom: auto;
   background: #FFF;
   position: relative;
   flex-direction: column;
-  padding: 10px;
   border-radius: 5px;
+  padding: 2rem 1rem;
+}
+.login-user-form form {
+  margin-top: 50px;
 }
 
 .brand-logo-container {
@@ -338,10 +336,6 @@ h4 {
   border: 2px solid #FFF;
 }
 
-.form-container {
-  margin-top: 80px;
-}
-
 .form-group {
   padding: 0 1rem;
 }
@@ -375,7 +369,7 @@ h4 {
 }
 
 .recovery-container {
-  padding: 0 1rem;
+  padding: 0rem 1rem;
   font-size: 0.85rem;
   text-align: left;
   color: #000;
@@ -417,11 +411,6 @@ small {
   justify-content: center;
   padding-top: 110px;
   padding-bottom: 10px;
-}
-
-.recovery-flex-center {
-  display: flex;
-  justify-content: center;
 }
 
 .recovery-user-form {
@@ -476,11 +465,6 @@ small {
   justify-content: center;
   padding-top: 100px;
   padding-bottom: 10px;
-}
-
-.register-flex-center {
-  display: flex;
-  justify-content: center;
 }
 
 .register-user-form {
