--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -1,43 +1,40 @@
-<!-- Main login container -->
-<h2 class="hidden">Login Form</h2>
-<div class="login-form">
-    <div class="login-user-form">
-        <!-- Top logo container -->
-        <div class="flex-center">
-            <div class="half-circle"></div>
-            <div class="brand-logo-container">
-                <img src="/static/images/logotype/login-logo.png" class="brand-logo" alt="Logo">
-            </div>
+<!-- Main login form container -->
+<div class="login-form-container">
+    <!-- Cricle logo container -->
+    <div class="flex-center">
+        <div class="half-circle"></div>
+        <div class="brand-logo-container">
+            <img src="/static/images/logotype/login-logo.png" class="brand-logo" alt="Logo">
         </div>
-        <!-- Form container -->
-        <div class="form-container">
-            <!-- Form -->
-            <form id="login-form" name="login-form" method="POST">>
-                <!-- Email input box -->
-                <div class="form-group">
-                    <label>Email address</label>
-                    <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                </div>
-                <!-- Password input box -->
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" class="form-control" id="login-password" placeholder="Password">
-                </div>
-                <!-- Login button -->
-                <div class="form-group login-button">
-                    <button type="button" name="button" class="btn login-btn" id="login-in-button">Login</button>
-                </div>
-            </form>
+    </div>
+    <!-- Form -->
+    <form id="login-form" name="login-form" method="POST">
+        <!-- Second title -->
+        <div class="form-group">
+            <h3 class="form-second-title">Login</h3>
         </div>
-        <!-- Recovery links container -->
-        <div class="recovery-container">
-            <div class="sign-up">
-                Don't have an account? <a href="{{url_for('register')}}" class="sign-up-link">Sign Up</a>
-            </div>
-            <div>
-                <a href="{{url_for('recovery')}}" class="forgot-password">Forgot your password?</a>
-            </div>
+        <!-- Email box -->
+        <div class="form-group">
+            <label>Email address</label>
+            <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email">
+        </div>
+        <!-- Password input box -->
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" id="login-password" placeholder="Password">
+        </div>
+        <!-- Login button -->
+        <div class="form-group main-button">
+            <button type="button" name="button" class="btn login-btn" id="login-in-button">Login</button>
+        </div>
+    </form>
+    <!-- Additional links -->
+    <div class="login-additional-links">
+        <div class="sign-up">
+            Don't have an account? <a href="{{url_for('register')}}" class="sign-up-link">Sign Up</a>
+        </div>
+        <div>
+            <a href="{{url_for('recovery')}}" class="forgot-password">Forgot your password?</a>
         </div>
     </div>
 </div>
